--- a/html/index.html
+++ b/html/index.html
@@ -2,17 +2,20 @@
 <html>
   <head>
     <title> Lost </title>
-    <meta name = "charset" charset = "utf-8">
+    <meta name = "charset" charset = "cursive">
     <meta name = "viewport" content = "width=device-width">
     <link rel = "stylesheet" type = "text/css" href = "style.css">
-    <script src = "script.js"></script>
+		<script src="https://embed.runkit.com" data-element-id="Gone8"></script>
     <script src= "socket.io/socket.io.js"></script>
   </head>
   <body onload = "onload()">
+		<script>
+			
+		</script>
     <div id = "Main">
       <audio id = "Ding" src = "Ding.mp3"> </audio>
 			<bdi
-      <h1 id = "Title"> Lost </h1>
+      <h1 class = "Title" id = "Title" > Lost </h1>
       <div id = "AccessPort">
         <label id = "NameLabel"> Username  </label>
         <input id = "NameInput" type = "text">
