--- a/html/index.html
+++ b/html/index.html
@@ -1,23 +1,31 @@
- <!DOCTYPE HTML>
+<!DOCTYPE HTML>
 <html>
-  <head>
-    <title> Lost </title>
-    <meta name = "charset" charset = "cursive">
-    <meta name = "viewport" content = "width=device-width">
-    <link rel = "stylesheet" type = "text/css" href = "style.css">
-		<script src="https://embed.runkit.com" data-element-id="Gone8"></script>
-    <script src= "socket.io/socket.io.js"></script>
-  </head>
-  <body onload = "onload()">
-		<script>
-			
-		</script>
-    <div id = "Main">
-      <audio id = "Ding" src = "Ding.mp3"> </audio>
-			<bdi
-      <h1 class = "Title" id = "Title" > Lost </h1>
-      <div id = "AccessPort">
-        <label id = "NameLabel"> Username  </label>
+
+<head>
+	<title> Lost </title>
+	<title>Repl Auth</title>
+	<link href="https://replit.com/@Lupo-Demone/Lost#GreatVibes-Regular.ttf" rel="stylesheet">
+	<meta name="charset" charset="cursive">
+	<meta name="viewport" content="width=device-width">
+	<link rel="stylesheet" type="text/css" href="style.css">
+	<script src="https://embed.runkit.com" data-element-id="Gone8">
+
+	</script>
+	<script src="socket.io/socket.io.js">
+
+	</script>
+</head>
+<body onload="onload()">
+
+	<script>
+
+	</script>
+	<life class="all">
+		<div id="Main">
+			<audio id="Ding" src="Ding.mp3"> </audio>
+			<bdi <h1 class="Title" id="Title"> Lost </h1>
+				<div id="AccessPort">
+					<label id = "NameLabel"> Username  </label>
         <input id = "NameInput" type = "text">
         <br><br>
 				<label id = "PassLabel"> Password  </label>
@@ -52,4 +60,5 @@
       <br><br>
     </div>
   </body>
+</life>
 </html>
