--- a/html/index.html
+++ b/html/index.html
@@ -1,63 +1,51 @@
-<!DOCTYPE HTML>
+ <!DOCTYPE HTML>
 <html>
-		<link href='https://fonts.googleapis.com/css?family=Great Vibes' rel='stylesheet'>
-<start first="first()">
-<head>
-	<title> Lost </title>
-	<meta name="charset" charset="cursive">
-	<meta name="viewport" content="width=device-width">
-	<link rel="stylesheet" type="text/css" href="style.css">
-	<script src="https://embed.runkit.com" data-element-id="Gone8">
-	<script src="socket.io/socket.io.js">
-
-	</script>
-	<style>
-		life{
-			font-family: 'Great Vibes'
-		}
-	</style>
-</head>
-<body onload="onload()">
-	<life class="all">
-		<div id="Main">
-			<audio id="Ding" src="Ding.mp3"> </audio>
-			<bdi <h1 class="Title" id="Title"> Lost </h1>
-				<div id="AccessPort">
-					<label id = "NameLabel"> Username  </label>
+  <head>
+    <title> Lost </title>
+    <meta name = "charset" charset = "utf-8">
+    <meta name = "viewport" content = "width=device-width">
+    <link rel = "stylesheet" type = "text/css" href = "style.css">
+    <script src = "script.js"></script>
+    <script src= "socket.io/socket.io.js"></script>
+		<link href='https://fonts.googleapis.com/css?family=Beth Ellen' rel='stylesheet'>
+		<script>
+			document.getElementById("RA").style.opacity = 0;
+		</script>
+  </head>
+	<div id = 'life'>
+  <body onload = "onload()">
+    <div id = "Main">
+      <audio id = "Ding" src = "Ding.mp3"> </audio>
+      <h1 id = "Title"> Lost </h1>
+      <div id = "AccessPort">
+        <label id = "NameLabel"> Username  </label>
         <input id = "NameInput" type = "text">
-        <br><br>
-				<label id = "PassLabel"> Password  </label>
-        <input id = "PassInput" type = "text">
-        <br><br>
+        <br></br>
         <label id = "IDLabel"> Room </label>
         <input id = "IDInput" value = "Lost" type = "text">
         <input id = "ConnectButton" class = "Button" type = "submit" value = "Connect" onclick = "Connect()">
+				<br></br>
+				<label id = 'RA'>
+					You are not allowed to access that room.
+				</label>
       </div>
-      <h2 id = "RoomID"> Room : None </h2>
+      <h2 id = "RoomID"> Chatroom : None </h2>
       <div id = "Chat">
-			<mes id = "Messages">	
-        <p id = "Message0" class = "Message"> - </p>
-        <p id = "Message1" class = "Message"> - </p>
-        <p id = "Message2" class = "Message"> - </p>
-        <p id = "Message3" class = "Message"> - </p>
-        <p id = "Message4" class = "Message"> - </p>
-        <p id = "Message5" class = "Message"> - </p>
-        <p id = "Message6" class = "Message"> - </p>
-        <p id = "Message7" class = "Message"> - </p>
-				<p id = "Message8" class = "Message"> - </p>
-				<p id = "Message9" class = "Message"> - </p>
-				<p id = "Message10" class = "Message"> - </p>
-				<p id = "Message11" class = "Message"> - </p>
-				<p id = "Message12" class = "Message"> - </p>
-				<p id = "Message13" class = "Message"> - </p>
-				<p id = "Message14" class = "Message"> - </p>
-				<p id = "Message15" class = "Message"> - </p>
-				<p id = "Message16" class = "Message"> - </p>
-				<p id = "Message17" class = "Message"> - </p>
-				<p id = "Message18" class = "Message"> - </p>
-				<p id = "Message19" class = "Message"> - </p>
-				<p id = "Message20" class = "Message"> - </p>
-			</mes>
+				<div id = "mess">
+					<h3>
+					<p id = "Message0" class = "Message"> - </p>
+      	  <p id = "Message1" class = "Message"> - </p>
+        	<p id = "Message2" class = "Message"> - </p>
+	        <p id = "Message3" class = "Message"> - </p>
+  	      <p id = "Message4" class = "Message"> - </p>
+    	    <p id = "Message5" class = "Message"> - </p>
+      	  <p id = "Message6" class = "Message"> - </p>
+      	  <p id = "Message7" class = "Message"> - </p>
+					<p id = "Message8" class = "Message"> - </p>
+					<p id = "Message9" class = "Message"> - </p>
+					<p id = "Message10" class = "Message"> - </p>
+					</h3>
+			</div>
         <label id = "MessageLabel"> Message </label>
         <input id = "ComposedMessage" type = "text">
         <input id = "SendMessage" onclick="Send()" value = "Send" class = "Button" type = "submit">
@@ -65,5 +53,5 @@
       <br><br>
     </div>
   </body>
-</life>
+	</div>
 </html>
