--- a/html/index.html
+++ b/html/index.html
@@ -1,4 +1,4 @@
- <!DOCTYPE HTML>
+<!DOCTYPE HTML>
 <html>
   <head>
     <title> Lost </title>
@@ -8,7 +8,7 @@
     <script src = "script.js"></script>
     <script src= "socket.io/socket.io.js"></script>
 		<link href='https://fonts.googleapis.com/css?family=Beth Ellen' rel='stylesheet'>
-		<script>
+		<script op = 'Change()'>
 			document.getElementById("RA").style.opacity = 0;
 		</script>
   </head>
